--- a/package.json
+++ b/package.json
@@ -6,9 +6,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.2",
+    "better-react-spinkit": "^2.0.4",
+    "faker": "^5.5.3",
+    "heroicons": "^1.0.6",
+    "lodash": "^4.17.21",
     "next": "latest",
+    "next-auth": "^4.0.0-beta.7",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
+    "react-spotify-web-playback": "^0.9.2",
+    "recoil": "^0.7.3-alpha.2",
+    "spotify-web-api-node": "^5.0.2",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
@@ -16,6 +30,7 @@
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
   }
